--- a/Bq.Tests/Bq.Tests.csproj
+++ b/Bq.Tests/Bq.Tests.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="NFluent" Version="2.7.0" />
     <PackageReference Include="trivialtestrunner" Version="1.1.0" />
   </ItemGroup>
 
