--- a/Bq.Tests/Bq.Tests.csproj
+++ b/Bq.Tests/Bq.Tests.csproj
@@ -6,6 +6,8 @@
     <UserSecretsId>708e3b9d-6f83-4986-bf62-b5f87a8be3fc</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="3.1.3" />
     <PackageReference Include="NFluent" Version="2.7.0" />
     <PackageReference Include="trivialtestrunner" Version="1.1.0" />
   </ItemGroup>
