--- a/Bq.Tests.Integration/Bq.Tests.Integration.csproj
+++ b/Bq.Tests.Integration/Bq.Tests.Integration.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoFixture" Version="4.11.0" />
     <PackageReference Include="NFluent" Version="2.7.0" />
     <PackageReference Include="Oracle.ManagedDataAccess" Version="19.6.0" />
     <PackageReference Include="TrivialTestRunner" Version="2.0.0" />
