--- a/Bq.Core/Bq.Core.csproj
+++ b/Bq.Core/Bq.Core.csproj
@@ -15,6 +15,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Polly" Version="7.2.0" />
   </ItemGroup>
 
 </Project>
